nginx conf change
Signed-off-by: kevin.xu <cming.xu@gmail.com>

--- a/nginx.conf
+++ b/nginx.conf
@@ -50,8 +50,8 @@ http {
     listen          443 ssl;
     server_name     huairu-tech.com localhost 127.0.0.1;
 
-    ssl_certificate      /etc/huairu-tech/cert.pem;
-    ssl_certificate_key  /etc/huairu-tech/cert.key;
+    ssl_certificate      /etc/huairu-tech/huairu-tech.com.pem;
+    ssl_certificate_key  /etc/huairu-tech/huairu-tech.com.key;
 
 
     #ssl_session_cache    shared:SSL:1m;
